<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.andrerinas.headunitrevived.main.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_usbListFragment"
            app:destination="@id/usbListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_networkListFragment"
            app:destination="@id/networkListFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.andrerinas.headunitrevived.main.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_keymapFragment"
            app:destination="@id/keymapFragment" />
    </fragment>

    <fragment
        android:id="@+id/keymapFragment"
        android:name="com.andrerinas.headunitrevived.main.KeymapFragment"
        android:label="@string/keymap" />

    <fragment
        android:id="@+id/usbListFragment"
        android:name="com.andrerinas.headunitrevived.main.UsbListFragment"
        android:label="@string/usb" />

    <fragment
        android:id="@+id/networkListFragment"
        android:name="com.andrerinas.headunitrevived.main.NetworkListFragment"
        android:label="@string/wifi" />

</navigation>
